semi-completed without animations

--- a/src/App.css
+++ b/src/App.css
@@ -11547,7 +11547,8 @@ iframe {
 /*# sourceMappingURL=style-starter.css.map */
 
 .navbar {
-  border-bottom: 1px solid;
+  box-shadow: 0px 0px 14px 0px grey;
+  /* border-bottom: 1px solid var(--purple); */
   background-color: white;
 }
 
@@ -11555,3 +11556,8 @@ iframe {
   background-color: white;
   border: none;
 }
+
+/* .navbar-brand{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  
+} */
