--- a/src/App.css
+++ b/src/App.css
@@ -11556,16 +11556,7 @@ iframe {
 
 /*# sourceMappingURL=style-starter.css.map */
 
-.navbar {
-  box-shadow: 0px 0px 14px 0px grey;
-  /* border-bottom: 1px solid var(--purple); */
-  background-color: white;
-}
 
-.justify-content-end{
-  background-color: white;
-  border: none;
-}
 
 /* .navbar-brand{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -11574,14 +11565,14 @@ iframe {
 
 
 .navbar-nav a {
-  color: #872ef2;
+  color: whitesmoke;
   font-weight: bold;
   font-family: "Quicksand";
 }
 
 .nav-link a:hover {
-  border-bottom: 5px solid #4e2d89;
-  color: purple;
+  border-bottom: 5px solid black;
+  color: black;
 }
 
 .btn {
@@ -11735,4 +11726,16 @@ btn:hover{
 .w3l-footer{
   background-color: red;
   background: red;
+}
+
+
+.navbar {
+  /* box-shadow: 0px 0px 14px 0px grey; */
+  /* border-bottom: 1px solid var(--purple); */
+  background-color: var(--purple);
+}
+
+.justify-content-end{
+  background-color: var(--purple);
+  border: none;
 }
