--- a/src/App.css
+++ b/src/App.css
@@ -11732,10 +11732,10 @@ btn:hover{
 .navbar {
   /* box-shadow: 0px 0px 14px 0px grey; */
   /* border-bottom: 1px solid var(--purple); */
-  background-color: var(--purple);
+  background-color: blue;
 }
 
 .justify-content-end{
-  background-color: var(--purple);
+  background-color: blue;
   border: none;
 }
