--- a/src/App.css
+++ b/src/App.css
@@ -11571,8 +11571,8 @@ iframe {
 }
 
 .nav-link a:hover {
-  border-bottom: 5px solid black;
-  color: black;
+  border-bottom: 5px solid wheat;
+  color: wheat;
 }
 
 .btn {
@@ -11730,7 +11730,7 @@ btn:hover{
 
 
 .navbar {
-  /* box-shadow: 0px 0px 14px 0px grey; */
+  box-shadow: 0px 0px 14px 0px grey;
   /* border-bottom: 1px solid var(--purple); */
   background-color: blue;
 }
