--- a/src/App.css
+++ b/src/App.css
@@ -11565,14 +11565,14 @@ iframe {
 
 
 .navbar-nav a {
-  color: whitesmoke;
+  color: var(--purple);
   font-weight: bold;
   font-family: "Quicksand";
 }
 
 .nav-link a:hover {
-  border-bottom: 5px solid wheat;
-  color: wheat;
+  border-bottom: 5px solid #59339D;
+  color: #59339D;
 }
 
 .btn {
@@ -11732,10 +11732,10 @@ btn:hover{
 .navbar {
   box-shadow: 0px 0px 14px 0px grey;
   /* border-bottom: 1px solid var(--purple); */
-  background-color: blue;
+  background-color: whitesmoke;
 }
 
 .justify-content-end{
-  background-color: blue;
+  background-color: whitesmoke;
   border: none;
 }
